# ai-code-example

./: README.md
a2a/my-project/: README.md  pyproject.toml
a2a/my-project/src/my_project/: __init__.py
ai-ide/: README.md
ai-ide/cursor/AIExpenseTracker-Agent-gpt-4o/: categories.html  index.html  transactions.html
ai-ide/windsurf/洛克菲勒家族关系研究项目/: .windsurfrules  README.md  requirements.txt  todo.md  项目总结.md
ai-ide/windsurf/洛克菲勒家族关系研究项目/数据/: 洛克菲勒家族关系.csv  洛克菲勒家族成员.csv  洛克菲勒家族成员.json
ai-ide/windsurf/洛克菲勒家族关系研究项目/洛克菲勒研究/: main.py  web_report.py  数据分析.py  数据收集.py
ai-ide/windsurf/洛克菲勒家族关系研究项目/结果/: 家族网络数据.json  网络分析结果.json
cursor/AIExpenseTracker-Agent-gpt-4o/: analysis.html  login.html  settings.html
function-calling/: fc-aliyun-bailian-1.py  fc-aliyun-bailian-2.py  fc-volcengine-1.py  fc-volcengine-2.py
structured-outputs/: sc-aliyunbailian.py  sc-openai.py
trickle/: 使用Trickle在线工具创建的AI代码工程.txt
